# LotteryElicitationEnv

./: .gitignore  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
baselines/: __init__.py  holt_laury_fixed.py  random_lottery.py
env/: __init__.py  config.py  holt_laury.py  lottery_env.py  models.py  priors.py  respondent.py  reward.py
eval/: __init__.py  evaluate.py
server/: Dockerfile  LotteryElicitationEnv_environment.py  __init__.py  app.py  requirements.txt
tests/: __init__.py  test_contract.py  test_env.py  test_respondent.py  test_reward.py
